BTL_2 (parser)/MiniGoParser.py
# Generated from main/MiniGo.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'for'", "'return'", 
                     "'func'", "'type'", "'struct'", "'interface'", "'string'", 
                     "'int'", "'float'", "'boolean'", "'const'", "'var'", 
                     "'continue'", "'break'", "'range'", "'nil'", "'true'", 
                     "'false'", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", 
                     "'!'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "':='", "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", 
                     "','", "':'", "';'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "FOR", "RETURN", "FUNC", 
                      "TYPE", "STRUCT", "INTERFACE", "STRING", "INT", "FLOAT", 
                      "BOOLEAN", "CONST", "VAR", "CONTINUE", "BREAK", "RANGE", 
                      "NIL", "TRUE", "FALSE", "ADD", "SUB", "MUL", "DIV", 
                      "DIVDIV", "EQUALEQUAL", "NOEQUAL", "L", "LEQUAL", 
                      "R", "REQUAL", "ANDAND", "OR", "NOSIG", "ASSIGN", 
                      "ADDEQUAL", "SUBEQUAL", "MULEQUAL", "DIVEQUAL", "DIVDIVEQUAL", 
                      "COLONEQUAL", "LP", "RP", "LB", "RB", "LSB", "RSB", 
                      "DOT", "COMMA", "COLON", "SEMICOLON", "ID", "INT_LIT", 
                      "FLOAT_LIT", "STRING_LIT", "NEWLINE", "COMMENT", "LINE_COMMENT", 
                      "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_dec_list = 1
    RULE_literal = 2
    RULE_primitive_types = 3
    RULE_type_withID = 4
    RULE_literal_primitive = 5
    RULE_sub_inside_array_lit = 6
    RULE_inside_array_lit = 7
    RULE_sub_type_array = 8
    RULE_type_array = 9
    RULE_array_literal = 10
    RULE_struct_literal = 11
    RULE_struct_list_element = 12
    RULE_endcode = 13
    RULE_list_expression = 14
    RULE_expression = 15
    RULE_expression1 = 16
    RULE_expression2 = 17
    RULE_expression3 = 18
    RULE_expression4 = 19
    RULE_expression5 = 20
    RULE_expression6 = 21
    RULE_expression7 = 22
    RULE_declared = 23
    RULE_variables_declared = 24
    RULE_declared_init = 25
    RULE_declared_no_init = 26
    RULE_constants_declared = 27
    RULE_function_declared = 28
    RULE_a_func = 29
    RULE_func_para_list = 30
    RULE_param = 31
    RULE_list_ID = 32
    RULE_inside_part_func = 33
    RULE_method_declared = 34
    RULE_struct_declared = 35
    RULE_inside_part_struct_type = 36
    RULE_interface_declared = 37
    RULE_inside_part_interface = 38
    RULE_sub_inside_part_interface = 39
    RULE_interface_para_list = 40
    RULE_param_interface = 41
    RULE_list_ID_interface = 42
    RULE_list_statement = 43
    RULE_statement = 44
    RULE_declared_statement = 45
    RULE_assign_op = 46
    RULE_assign_statement = 47
    RULE_index = 48
    RULE_lhs = 49
    RULE_rhs = 50
    RULE_if_statement = 51
    RULE_elif_part = 52
    RULE_else_part = 53
    RULE_for_assign = 54
    RULE_for_statement = 55
    RULE_for_basic = 56
    RULE_for_init_cond = 57
    RULE_for_range = 58
    RULE_break_statement = 59
    RULE_continue_statement = 60
    RULE_call_statement = 61
    RULE_function_call = 62
    RULE_method_call = 63
    RULE_return_statement = 64

    ruleNames =  [ "program", "dec_list", "literal", "primitive_types", 
                   "type_withID", "literal_primitive", "sub_inside_array_lit", 
                   "inside_array_lit", "sub_type_array", "type_array", "array_literal", 
                   "struct_literal", "struct_list_element", "endcode", "list_expression", 
                   "expression", "expression1", "expression2", "expression3", 
                   "expression4", "expression5", "expression6", "expression7", 
                   "declared", "variables_declared", "declared_init", "declared_no_init", 
                   "constants_declared", "function_declared", "a_func", 
                   "func_para_list", "param", "list_ID", "inside_part_func", 
                   "method_declared", "struct_declared", "inside_part_struct_type", 
                   "interface_declared", "inside_part_interface", "sub_inside_part_interface", 
                   "interface_para_list", "param_interface", "list_ID_interface", 
                   "list_statement", "statement", "declared_statement", 
                   "assign_op", "assign_statement", "index", "lhs", "rhs", 
                   "if_statement", "elif_part", "else_part", "for_assign", 
                   "for_statement", "for_basic", "for_init_cond", "for_range", 
                   "break_statement", "continue_statement", "call_statement", 
                   "function_call", "method_call", "return_statement" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    FOR=3
    RETURN=4
    FUNC=5
    TYPE=6
    STRUCT=7
    INTERFACE=8
    STRING=9
    INT=10
    FLOAT=11
    BOOLEAN=12
    CONST=13
    VAR=14
    CONTINUE=15
    BREAK=16
    RANGE=17
    NIL=18
    TRUE=19
    FALSE=20
    ADD=21
    SUB=22
    MUL=23
    DIV=24
    DIVDIV=25
    EQUALEQUAL=26
    NOEQUAL=27
    L=28
    LEQUAL=29
    R=30
    REQUAL=31
    ANDAND=32
    OR=33
    NOSIG=34
    ASSIGN=35
    ADDEQUAL=36
    SUBEQUAL=37
    MULEQUAL=38
    DIVEQUAL=39
    DIVDIVEQUAL=40
    COLONEQUAL=41
    LP=42
    RP=43
    LB=44
    RB=45
    LSB=46
    RSB=47
    DOT=48
    COMMA=49
    COLON=50
    SEMICOLON=51
    ID=52
    INT_LIT=53
    FLOAT_LIT=54
    STRING_LIT=55
    NEWLINE=56
    COMMENT=57
    LINE_COMMENT=58
    WS=59
    ERROR_CHAR=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dec_list(self):
            return self.getTypedRuleContext(MiniGoParser.Dec_listContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.dec_list()
            self.state = 131
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dec_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declared(self):
            return self.getTypedRuleContext(MiniGoParser.DeclaredContext,0)


        def dec_list(self):
            return self.getTypedRuleContext(MiniGoParser.Dec_listContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_dec_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDec_list" ):
                return visitor.visitDec_list(self)
            else:
                return visitor.visitChildren(self)




    def dec_list(self):

        localctx = MiniGoParser.Dec_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_dec_list)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.declared()
                self.state = 134
                self.dec_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.declared()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(MiniGoParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(MiniGoParser.FLOAT_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(MiniGoParser.STRING_LIT, 0)

        def NIL(self):
            return self.getToken(MiniGoParser.NIL, 0)

        def TRUE(self):
            return self.getToken(MiniGoParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MiniGoParser.FALSE, 0)

        def array_literal(self):
            return self.getTypedRuleContext(MiniGoParser.Array_literalContext,0)


        def struct_literal(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_literalContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = MiniGoParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_literal)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.INT_LIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(MiniGoParser.INT_LIT)
                pass
            elif token in [MiniGoParser.FLOAT_LIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.match(MiniGoParser.FLOAT_LIT)
                pass
            elif token in [MiniGoParser.STRING_LIT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.match(MiniGoParser.STRING_LIT)
                pass
            elif token in [MiniGoParser.NIL]:
                self.enterOuterAlt(localctx, 4)
                self.state = 142
                self.match(MiniGoParser.NIL)
                pass
            elif token in [MiniGoParser.TRUE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 143
                self.match(MiniGoParser.TRUE)
                pass
            elif token in [MiniGoParser.FALSE]:
                self.enterOuterAlt(localctx, 6)
                self.state = 144
                self.match(MiniGoParser.FALSE)
                pass
            elif token in [MiniGoParser.LSB]:
                self.enterOuterAlt(localctx, 7)
                self.state = 145
                self.array_literal()
                pass
            elif token in [MiniGoParser.ID]:
                self.enterOuterAlt(localctx, 8)
                self.state = 146
                self.struct_literal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MiniGoParser.INT, 0)

        def FLOAT(self):
            return self.getToken(MiniGoParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MiniGoParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MiniGoParser.STRING, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_primitive_types

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive_types" ):
                return visitor.visitPrimitive_types(self)
            else:
                return visitor.visitChildren(self)




    def primitive_types(self):

        localctx = MiniGoParser.Primitive_typesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_primitive_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniGoParser.STRING) | (1 << MiniGoParser.INT) | (1 << MiniGoParser.FLOAT) | (1 << MiniGoParser.BOOLEAN))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_withIDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_types(self):
            return self.getTypedRuleContext(MiniGoParser.Primitive_typesContext,0)


        def type_array(self):
            return self.getTypedRuleContext(MiniGoParser.Type_arrayContext,0)


        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_type_withID

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_withID" ):
                return visitor.visitType_withID(self)
            else:
                return visitor.visitChildren(self)




    def type_withID(self):

        localctx = MiniGoParser.Type_withIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type_withID)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.STRING, MiniGoParser.INT, MiniGoParser.FLOAT, MiniGoParser.BOOLEAN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.primitive_types()
                pass
            elif token in [MiniGoParser.LSB]:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.type_array()
                pass
            elif token in [MiniGoParser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 153
                self.match(MiniGoParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Literal_primitiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(MiniGoParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(MiniGoParser.FLOAT_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(MiniGoParser.STRING_LIT, 0)

        def TRUE(self):
            return self.getToken(MiniGoParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MiniGoParser.FALSE, 0)

        def NIL(self):
            return self.getToken(MiniGoParser.NIL, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_literal_primitive

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral_primitive" ):
                return visitor.visitLiteral_primitive(self)
            else:
                return visitor.visitChildren(self)




    def literal_primitive(self):

        localctx = MiniGoParser.Literal_primitiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_literal_primitive)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniGoParser.NIL) | (1 << MiniGoParser.TRUE) | (1 << MiniGoParser.FALSE) | (1 << MiniGoParser.INT_LIT) | (1 << MiniGoParser.FLOAT_LIT) | (1 << MiniGoParser.STRING_LIT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sub_inside_array_litContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MiniGoParser.LB, 0)

        def sub_inside_array_lit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.Sub_inside_array_litContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.Sub_inside_array_litContext,i)


        def RB(self):
            return self.getToken(MiniGoParser.RB, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def literal_primitive(self):
            return self.getTypedRuleContext(MiniGoParser.Literal_primitiveContext,0)


        def struct_literal(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_literalContext,0)


        def COMMA(self):
            return self.getToken(MiniGoParser.COMMA, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_sub_inside_array_lit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSub_inside_array_lit" ):
                return visitor.visitSub_inside_array_lit(self)
            else:
                return visitor.visitChildren(self)



    def sub_inside_array_lit(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniGoParser.Sub_inside_array_litContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_sub_inside_array_lit, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 159
                self.match(MiniGoParser.LB)
                self.state = 160
                self.sub_inside_array_lit(0)
                self.state = 161
                self.match(MiniGoParser.RB)
                pass

            elif la_ == 2:
                self.state = 163
                self.match(MiniGoParser.ID)
                pass

            elif la_ == 3:
                self.state = 164
                self.literal_primitive()
                pass

            elif la_ == 4:
                self.state = 165
                self.struct_literal()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 173
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MiniGoParser.Sub_inside_array_litContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_sub_inside_array_lit)
                    self.state = 168
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 169
                    self.match(MiniGoParser.COMMA)
                    self.state = 170
                    self.sub_inside_array_lit(5) 
                self.state = 175
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Inside_array_litContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MiniGoParser.LB, 0)

        def sub_inside_array_lit(self):
            return self.getTypedRuleContext(MiniGoParser.Sub_inside_array_litContext,0)


        def RB(self):
            return self.getToken(MiniGoParser.RB, 0)

        def inside_array_lit(self):
            return self.getTypedRuleContext(MiniGoParser.Inside_array_litContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_inside_array_lit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInside_array_lit" ):
                return visitor.visitInside_array_lit(self)
            else:
                return visitor.visitChildren(self)




    def inside_array_lit(self):
